2005-06-14  Miles Bader  <miles@gnu.org>

	* progmodes/idlw-help.el (idlwave-help-link):
	Remove "-face" suffix from face name.
	(idlwave-help-link-face):
	New backward-compatibility alias for renamed face.
	(idlwave-highlight-linked-completions): Use renamed idlwave-help faces.

	* progmodes/idlw-shell.el (idlwave-shell-bp-face)
	(idlwave-shell-disabled-bp): Remove "-face" suffix from face names.
	(idlwave-shell-bp-face, idlwave-shell-disabled-bp):
	New backward-compatibility aliases for renamed faces.
	(idlwave-shell-disabled-breakpoint-face)
	(idlwave-shell-breakpoint-face): Use renamed idlwave-shell faces.

	* progmodes/flymake.el (flymake-errline, flymake-warnline): 
	Remove "-face" suffix from face names.
	(flymake-errline-face, flymake-warnline-face):
	New backward-compatibility aliases for renamed faces.
	(flymake-highlight-line): Use renamed flymake faces.

	* progmodes/ebrowse.el (ebrowse-tree-mark, ebrowse-root-class)
	(ebrowse-file-name, ebrowse-default, ebrowse-member-attribute)
	(ebrowse-member-class, ebrowse-progress):
	Remove "-face" suffix from face names.
	(ebrowse-tree-mark-face, ebrowse-root-class-face)
	(ebrowse-file-name-face, ebrowse-default-face)
	(ebrowse-member-attribute-face, ebrowse-member-class-face)
	(ebrowse-progress-face): 
	New backward-compatibility aliases for renamed faces.
	(ebrowse-show-progress, ebrowse-show-file-name-at-point)
	(ebrowse-set-mark-props, ebrowse-draw-tree-fn)
	(ebrowse-draw-member-buffer-class-line, ebrowse-draw-member-long-fn)
	(ebrowse-draw-member-short-fn): Use renamed ebrowse faces.

	* progmodes/antlr-mode.el (antlr-default, antlr-keyword, antlr-syntax)
	(antlr-ruledef, antlr-tokendef, antlr-ruleref, antlr-tokenref)
	(antlr-literal): Remove "-face" suffix and "font-lock-" from face
	names.
	(antlr-font-lock-default-face, antlr-font-lock-keyword-face)
	(antlr-font-lock-syntax-face, antlr-font-lock-ruledef-face)
	(antlr-font-lock-tokendef-face, antlr-font-lock-ruleref-face)